@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 4.2.0
 
+
+  *) [TS-2377] Install man pages as part of the build.
+
   *) [TS-2379] Add a new field: '%<chp>', "client_host_port" to LogFormat.
 
   *) [TS-2374] Abort the producer if the none of it`s consumers is alive.
